# CONCORDIUM_TASK_3

./: .gitignore  README.md  index.html  package-lock.json
.github/workflows/: deploy.yml
assets/: AccountInfoPage-12d97bdd.js  AccountInfoPage-178f7303.js  AccountInfoPage-2b0254b2.js  AccountInfoPage-780bee97.js  AccountInfoPage-bf6553b1.js  Balance-0ce33a3f.js  Balance-0df9fa20.js  Balance-127fedaa.js  Balance-7dff7730.js  Balance-f172c45b.js  BecomeTheRichestPage-55471467.js  BecomeTheRichestPage-a4986bb6.js  BecomeTheRichestPage-b95f442f.js  BecomeTheRichestPage-cff4845e.js  BecomeTheRichestPage-df91b375.js  ContractDataPage-2aae437d.js  ContractDataPage-66ec052e.js  ContractDataPage-70dc4d70.js  ContractDataPage-ba5087bf.js  ContractDataPage-efb2b242.js  ContractInfoPage-332cac19.js  ContractInfoPage-42ec7d52.js  ContractInfoPage-709ea23b.js  ContractInfoPage-76c15b3b.js  ContractInfoPage-afc4593a.js  IndexPage-642e2420.js  IndexPage-8b907478.js  IndexPage-9a7027d7.js  IndexPage-d859f063.js  IndexPage-db1c6398.js  NoAccount-6dcc06b3.js  NoAccount-a8956654.js  NoAccount-aa57c43d.js  NoAccount-cdfc9bba.js  NoAccount-e57f47e3.js  index-04fdfbc7.js  index-14746a3c.js  index-52ea28f6.js  index-53a464c4.js  index-968a6f9b.js  (+1 more)
become-the-richest-contract/: Cargo.toml
become-the-richest-contract/src/: lib.rs
become-the-richest-dapp/: index.html  package-lock.json  package.json  vite.config.ts
become-the-richest-dapp/src/: App.css  App.tsx  main.tsx
become-the-richest-dapp/src/components/: Account.tsx  Address.tsx  Balance.tsx  NetworkSelector.tsx  genericView.tsx  (+1 more)
(+8 files in other folders)
